# daily-sales-downloader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: project-identity.example.json  settings.json  settings.local.example.json
.claude/hooks/: posttool_project_audit.py  pretool_project_guard.py
.claude/skills/browser-regression/: SKILL.md
.claude/skills/nextjs-app-router/: SKILL.md
.claude/skills/playwright-python/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/web-automation-stack/: SKILL.md
docs/: detailed-design.md  knowledge-share.md  spec.md
plans/: plan.md
src/: config.py  credential.py  main.py  session_refresh.py
src/downloader/: amazon.py  base.py  next_engine.py  rakuten.py  shopify.py  yahoo.py
src/utils/: logger.py  path_resolver.py
tests/: test_config.py  test_credential.py  test_path_resolver.py
